# architecture_labs

./: .gitignore  README.md
laba1/: .dockerignore  .env.example  Dockerfile.migrate  README.md  alembic.ini  docker-compose.yml  pyproject.toml  task_1.md
laba1/app/: Dockerfile  main.py
laba1/app/api/: __init__.py  auth.py  items.py
laba1/app/core/: config.py  constants.py  database.py
laba1/app/crud/: __init__.py  item.py  user.py
laba1/app/models/: __init__.py  item.py  user.py
laba1/app/schemas/: __init__.py  auth.py  item.py  user.py
laba1/app/utils/: deps.py  export_openapi.py  jwt.py  password.py
laba1/docs/: openapi.json  openapi.yaml
laba1/front_app/: Dockerfile  index.html  nginx.conf  package.json
laba1/front_app/src/: App.css  App.tsx  types.ts
laba1/front_app/src/api/: auth.ts  client.ts  items.ts
laba1/front_app/src/components/auth/: ProtectedRoute.tsx
laba1/front_app/src/components/layout/: Layout.tsx
laba1/front_app/src/constants/: roles.ts
laba1/front_app/src/context/: AuthContext.tsx
laba1/front_app/src/pages/: Items.tsx  Login.tsx  Register.tsx
laba1/migrations/: env.py
laba1/migrations/versions/: 439401e479be_init.py
laba2/: README.md  pyproject.toml  task_2.md
laba2/app/: client.py  crypto.py  models.py  server.py
laba3/: .env.example  Dockerfile  Dockerfile.migrate  README.md  docker-compose.yml  pyproject.toml  task_3.md
laba3/app/: main.py
laba3/app/api/: routes.py
laba3/app/core/: __init__.py  config.py  database.py  logger.py
laba3/app/models/: __init__.py  exchange_rate.py
laba3/app/query_schemas/: __init__.py  report.py  sync_period.py
laba3/app/schemas/: __init__.py  report.py  sync.py
laba3/app/service/: __init__.py  exchange_rates.py
laba3/app/utils/: __init__.py  currencies.py  lifespan.py  scheduler.py
laba3/app/utils/cnb/: __init__.py  client.py  parser.py
laba3/migrations/: env.py
laba3/migrations/versions/: c1fa0065eda5_init.py  c73341b58257_init.py
